refactor: do not proxy bean methods and limit visibility to package-private